# dara-bochi

./: CLAUDE.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: biome.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BouncyBall.tsx
